# minlibsys

./: Dockerfile  IdeasAndReproduction.md  README.md  Reproduction.md  manage.py  pyproject.toml
author/: admin.py  models.py
author/migrations/: 0001_initial.py
book/: admin.py  models.py  serializers.py  views.py
book/migrations/: 0001_initial.py  0002_alter_book_isbn.py
borrowing/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
borrowing/migrations/: 0001_initial.py  0002_initial.py  0003_remove_borrowing_one_borrow_per_copy_unless_returned_and_more.py
member/: admin.py  models.py  serializers.py  views.py
member/migrations/: 0001_initial.py
minlibsys/: asgi.py  settings.py  urls.py  wsgi.py
