[project]
name = "minilibrarymanagementsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.30.0",
]

[tool.ruff]
line-length = 80 # Personal preference

[tool.ruff.format]
preview = true
